[package]
name = "gemm-asm"
version = "0.1.0"
edition = "2021"

[dependencies]

[features]
nightly = []

[dev-dependencies]
aligned-vec = "0.6.1"
diol = { version = "0.8.3", default-features = false }
num-complex = "0.4.6"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3
