[package]
name = "gemm-asm"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(any(all(target_arch = "x86", not(target_env = "sgx"), target_feature = "sse"), all(target_arch = "x86_64", not(target_env = "sgx"))))'.dependencies]
raw-cpuid = { version = "11.1.0", optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
sysctl = { version = "0.6.0", optional = true }

[features]
default = ["std"]
std = ["raw-cpuid"]
nightly = []

[dev-dependencies]
aligned-vec = "0.6.1"
diol = { version = "0.8.3", default-features = false }
num-complex = "0.4.6"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3
